# MagicTaillight

./: .gitignore  CMakeLists.txt  README.md  sdkconfig
main/: CMakeLists.txt  LIS3DH.c  LIS3DH.h  bh1750.c  bh1750.h  ble.c  ble.h  main.c
main/vl53l1x/: vl53l1_platform.c  vl53l1_platform_user_data.h
